corrected pixel gaps in some css art divisions.

--- a/src/app/home/components/HeroSection/styles.module.scss
+++ b/src/app/home/components/HeroSection/styles.module.scss
@@ -14,7 +14,7 @@
     content: '';
     background: var(--red);
     position: absolute;
-    top: 0px;
+    top: 0;
     left: 0;
     right: 0;
     height: calc(100% + 20px);
@@ -34,12 +34,12 @@
   &::before {
     content: '';
     position: absolute;
-    mask: linear-gradient(var(--black) 0%, var(--black) 100%) 0 0/100% calc(100% - 250px) no-repeat, url(../../../../assets/angle_mask2.svg) 50% 100%/auto no-repeat;
+    mask: linear-gradient(var(--black) 0%, var(--black) 100%) 0 0/100% calc(100% - 250px + 0.5px) no-repeat, url(../../../../assets/angle_mask2.svg) 50% 100%/auto no-repeat;
     width: 100%;
     height: 100%;
     background: var(--black);
-    top: 0;
-    left:0;
+    top: -1px;
+    left: 0;
   }
 }
 
